REOPENED106389
min-content gets the wrong value if min-width is set on some form controls
https://bugs.webkit.org/show_bug.cgi?id=106389
Summary min-content gets the wrong value if min-width is set on some form controls
Ojan Vafai
Reported 2013-01-08 15:04:20 PST
min-content gets the wrong value if min-width is set on some form controls
Attachments
Patch (12.13 KB, patch)
2013-01-08 15:06 PST, Ojan Vafai
no flags
Patch (13.13 KB, patch)
2013-01-08 16:55 PST, Ojan Vafai
tony: review+
Ojan Vafai
Comment 1 2013-01-08 15:06:07 PST
Build Bot
Comment 2 2013-01-08 16:22:08 PST
Comment on attachment 181778 [details] Patch Attachment 181778 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15763279 New failing tests: fast/forms/min-content-form-controls.html
Build Bot
Comment 3 2013-01-08 16:45:44 PST
Comment on attachment 181778 [details] Patch Attachment 181778 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15759328 New failing tests: fast/forms/min-content-form-controls.html
Ojan Vafai
Comment 4 2013-01-08 16:55:40 PST
Tony Chang
Comment 5 2013-01-09 10:58:55 PST
Comment on attachment 181806 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181806&action=review > Source/WebCore/rendering/RenderFileUploadControl.cpp:198 > > + Nit: Extra blank line?
Ojan Vafai
Comment 6 2013-01-09 11:42:22 PST
Dimitri Glazkov (Google)
Comment 7 2013-01-09 12:37:19 PST
Ojan Vafai
Comment 8 2013-01-09 13:22:56 PST
Ahmad Saleem
Comment 9 2023-02-21 13:05:23 PST
I took the test from the patch (it was also on source.chromium.org) and then tested it in Safari Technology Preview 163 and it passes all test: Test Case - https://www.youtube.com/watch?v=AxYezM4XJ3o Do we need anything else? Thanks!
Ahmad Saleem
Comment 10 2023-02-25 08:59:52 PST
(In reply to Ahmad Saleem from comment #9) > I took the test from the patch (it was also on source.chromium.org) and then > tested it in Safari Technology Preview 163 and it passes all test: > > Test Case - https://www.youtube.com/watch?v=AxYezM4XJ3o > > Do we need anything else? Thanks! https://jsfiddle.net/0mnpues3/show
Note You need to log in before you can comment on or make changes to this bug.