min-content gets the wrong value if min-width is set on some form controls https://bugs.webkit.org/show_bug.cgi?id=106389

Reviewed by Tony Chang.

Source/WebCore:

Simplify the logic. The only exposed change in behavior is that
m_minPreferredLogicalWidth gets set to m_maxPreferredLogicalWidth
instead of 0 when min-width is set.

Test: fast/forms/min-content-form-controls.html

* rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::computePreferredLogicalWidths):
* rendering/RenderListBox.cpp:
(WebCore::RenderListBox::computePreferredLogicalWidths):
* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::computePreferredLogicalWidths):
* rendering/RenderSlider.cpp:
(WebCore::RenderSlider::computePreferredLogicalWidths):
* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computePreferredLogicalWidths):

LayoutTests:

* fast/forms/min-content-form-controls-expected.txt: Added.
* fast/forms/min-content-form-controls.html: Added.

Canonical link: https://commits.webkit.org/124665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139216 268f45cc-cd09-0410-ab3c-d52691b4dbfc